kubernetes/catalog/grocy/manifests/deployment.yaml
---
# Generated by InfraWeaver Community Apps from Unraid AppFeed
# Source: https://raw.githubusercontent.com/linuxserver/templates/main/unraid/grocy.xml
# Category: Productivity, Tools-Utilities
# Stars: 189 | Downloads: 57074452
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grocy
  namespace: grocy
  labels:
    app.kubernetes.io/name: grocy
    app.kubernetes.io/managed-by: infraweaver
    infraweaver.io/source: community-apps
    infraweaver.io/tier: simple
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: grocy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grocy
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: grocy
          image: lscr.io/linuxserver/grocy
          ports:
            - containerPort: 80
              protocol: TCP
              name: webui
          startupProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 120
          readinessProbe:
            tcpSocket:
              port: 80
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 80
            periodSeconds: 30
            failureThreshold: 3
          volumeMounts:
            - name: grocy-data-0
              mountPath: "/config"
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
      - name: grocy-data-0
        persistentVolumeClaim:
          claimName: grocy-data-0
---
apiVersion: v1
kind: Service
metadata:
  name: grocy
  namespace: grocy
  labels:
    app.kubernetes.io/name: grocy
    infraweaver.io/source: community-apps
spec:
  selector:
    app.kubernetes.io/name: grocy
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: webui
  type: ClusterIP
