kubernetes/catalog/grocy/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grocy
  namespace: grocy
  labels:
    app.kubernetes.io/name: grocy
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grocy.int.${BASE_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: forward-auth
          namespace: traefik
      services:
        - name: grocy
          port: 80
  tls:
    store:
      name: default
      namespace: traefik
